fix taxonomy focus outline for higher contrast

--- a/source/_patterns/01-atoms/text/taxonomy-term/_taxonomy-term.scss
+++ b/source/_patterns/01-atoms/text/taxonomy-term/_taxonomy-term.scss
@@ -27,5 +27,6 @@ a.taxonomy-term,
   &:active {
     color: $light-green;
     background-color: $dark-blue;
+    outline-color: $dark-blue;
   }
 }
